--- a/CapstoneDesign_23_2/html/loginpage.html
+++ b/CapstoneDesign_23_2/html/loginpage.html
@@ -178,7 +178,7 @@
         Remember me
       </label>
     </div>
-    <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+    <button onclick="location.href='index.html'" class="btn btn-primary w-100 py-2" type="button">Sign in</button>
     <p class="mt-5 mb-3 text-body-secondary">&copy; 2023.10.27</p>
   </form>
 </main>
