--- a/CapstoneDesign_23_2/index/index.html
+++ b/CapstoneDesign_23_2/index/index.html
@@ -16,10 +16,10 @@
           <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample10">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/CapstoneDesign_23_2/dailypage/daily.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="../index/index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/CapstoneDesign_23_2/month/month.html">Month</a>
+                <a class="nav-link" href="../monthpage/monthpage.html">Month</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" aria-disabled="true">Disabled</a>
