--- a/CapstoneDesign_23_2/index/index.html
+++ b/CapstoneDesign_23_2/index/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <style>
+      table, th, td{
+        border: 1px solid black;  
+      }
+      th, td {
+        padding: 10px;
+      }
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Twelfth navbar example">
@@ -36,6 +44,54 @@
           </div>
         </div>
       </nav>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-  </body>
-</html>
+      <div class="">
+
+      </div>
+      <table>
+          <tr>
+            <th>time</th>
+            <th>
+              <div>classroom&</div>
+              <div>subject</div>
+            </th>
+            <th>memo</th>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>4-3,science</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>4-2,science</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>3-2,science</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>4-1,science</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>3-1, science</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>6</td>
+            <td>3-2, science</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>7</td>
+            <td></td>
+            <td></td>
+          </tr>
+      </table>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    </body>
+    </html>
