--- a/CapstoneDesign_23_2/weekpage/index.html
+++ b/CapstoneDesign_23_2/weekpage/index.html
@@ -28,10 +28,10 @@
                 <a class="nav-link active" aria-current="page" href="../index/index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../monthpage/index.html">Month</a>
+                <a class="nav-link" href="../weekpage/index.html">week</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../weekpage/index.html">Disabled</a>
+                <a class="nav-link" href="../monthpage/index.html">Month</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
@@ -45,74 +45,7 @@
           </div>
         </div>
       </nav>
-      <div class="flex-container">
-        <div class="flex-item">
-          daily timetable
-          <table>
-              <tr>
-                <th>time</th>
-                <th>
-                  <div>classroom&</div>
-                  <div>subject</div>
-                </th>
-                <th>memo</th>
-              </tr>
-              <tr>
-                <td>1</td>
-                <td>4-3,science</td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>2</td>
-                <td>4-2,science</td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>3</td>
-                <td>3-2,science</td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>4</td>
-                <td>4-1,science</td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>5</td>
-                <td>3-1, science</td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>6</td>
-                <td>3-2, science</td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>7</td>
-                <td></td>
-                <td></td>
-              </tr>
-          </table>
-        </div>
-        <div class="flex-item">
-          
-          <div class="row">
-            체크리스트
-            <div class="container">
-              123  
-            </div>
-            <div class="container">
-              123  
-            </div>
-            <div class="container">
-              123  
-            </div>
-            <div class="container">
-              123  
-            </div>
-          </div>
-        </div>
-      </div>
+      123
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     </body>
     </html>
