--- a/CapstoneDesign_23_2/weekpage/index.html
+++ b/CapstoneDesign_23_2/weekpage/index.html
@@ -38,7 +38,7 @@
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Setting</a></li>
                   <li><a class="dropdown-item" href="#">search</a></li>
-                  <li><a class="dropdown-item" href="#">Log out</a></li>
+                  <li><a class="dropdown-item" href="../index/loginpage.html">Log in</a></li>
                 </ul>
               </li>
             </ul>
