--- a/CapstoneDesign_23_2/index/index.html
+++ b/CapstoneDesign_23_2/index/index.html
@@ -12,6 +12,7 @@
       }
       th, td {
         padding: 10px;
+        text-align: center;
       }
     </style>
   </head>
@@ -45,58 +46,57 @@
         </div>
       </div>
     </nav>
-      <div class="flex-container">
-        <div class="flex-item">
-          daily timetable
-          <table>
-              <tr>
-                <th>time</th>
-                <th>
-                  <div>classroom&</div>
-                  <div>subject</div>
-                </th>
-                <th>memo</th>
-              </tr>
-              <tr>
-                <td>1</td>
-                <td>4-3,science</td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>2</td>
-                <td>4-2,science</td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>3</td>
-                <td>3-2,science</td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>4</td>
-                <td>4-1,science</td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>5</td>
-                <td>3-1, science</td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>6</td>
-                <td>3-2, science</td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>7</td>
-                <td></td>
-                <td></td>
-              </tr>
+    <div class="container" style="display: inline-flex; flex-direction: row; justify-content: center;">
+      <div class="flex-item" style="background-color: aqua;">
+        daily timetable
+        <table>
+            <tr>
+              <th>time</th>
+              <th>
+                <div>classroom&</div>
+                <div>subject</div>
+              </th>
+              <th>memo</th>
+            </tr>
+            <tr>
+              <td>1</td>
+              <td>4-3,science</td>
+              <td></td>
+             </tr>
+            <tr>
+              <td>2</td>
+              <td>4-2,science</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>3-2,science</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td>4-1,science</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>5</td>
+              <td>3-1, science</td>
+              <td></td>
+             </tr>
+            <tr>
+              <td>6</td>
+              <td>3-2, science</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>7</td>
+              <td></td>
+              <td></td>
+            </tr>
           </table>
         </div>
-        <div class="flex-item">
-          
-          <div class="row">
+        <div class="flex-item" style="background-color: greenyellow;">
+          <div class="row" style=";">
             체크리스트
             <div class="container">
               123  
