--- a/CapstoneDesign_23_2/weekpage/index.html
+++ b/CapstoneDesign_23_2/weekpage/index.html
@@ -36,7 +36,7 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Setting</a></li>
+                  <li><a class="dropdown-item" href="../settingpage/settingpage.html">Setting</a></li>
                   <li><a class="dropdown-item" href="#">search</a></li>
                   <li><a class="dropdown-item" href="../index/loginpage.html">Log in</a></li>
                 </ul>
@@ -45,7 +45,10 @@
           </div>
         </div>
       </nav>
-      123
+      <div style="text-align: center;">This is weekpage.</div>
+      <div class="container" style="text-align: center;">
+          <img src="https://file.miricanvas.com/template_thumb/2021/02/15/12/00/80f5016e-6229-4e5f-ae93-be6906b0f015/thumb.jpg" style="">
+      </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     </body>
     </html>
