--- a/CapstoneDesign_23_2/monthpage/index.html
+++ b/CapstoneDesign_23_2/monthpage/index.html
@@ -47,7 +47,7 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Setting</a></li>
+                <li><a class="dropdown-item" href="../settingpage/settingpage.html">Setting</a></li>
                 <li><a class="dropdown-item" href="#">search</a></li>
                 <li><a class="dropdown-item" href="../index/loginpage.html">Log in</a></li>
               </ul>
