--- a/CapstoneDesign_23_2/settingpage/settingpage.html
+++ b/CapstoneDesign_23_2/settingpage/settingpage.html
@@ -47,71 +47,14 @@
       </div>
     </nav>
     <div class="container" style="display: inline-flex; flex-direction: row; justify-content: center;">
-      <div class="flex-item" style="background-color: aqua;">
-        daily timetable
-        <table>
-            <tr>
-              <th>time</th>
-              <th>
-                <div>classroom&</div>
-                <div>subject</div>
-              </th>
-              <th>memo</th>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>4-3,science</td>
-              <td></td>
-             </tr>
-            <tr>
-              <td>2</td>
-              <td>4-2,science</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>3</td>
-              <td>3-2,science</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>4</td>
-              <td>4-1,science</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>5</td>
-              <td>3-1, science</td>
-              <td></td>
-             </tr>
-            <tr>
-              <td>6</td>
-              <td>3-2, science</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>7</td>
-              <td></td>
-              <td></td>
-            </tr>
-          </table>
+        <div style="row">
+            <div>This is settingpage.</div>
+            <div>일반 설정-알림 허용/거부,알림시 진동-허용/거부, </div>
+            <div>시수 설정할 수 있는 기능도 추가할 예정(과목-시수,과목-시수•••)</div>
         </div>
-        <div class="flex-item" style="background-color: greenyellow; text-align: center;">
-          <div class="row" style="text-align: center;">
-            <div class="container">
-              체크리스트
-            </div>
-            <div class="container">
-              <input type="checkbox">  <input type="text" name="st_name">
-            </div>
-            <div class="container">
-              123  
-            </div>
-            <div class="container">
-              123  
-            </div>
-          </div>
-        </div>
-      </div>
+    </div>
+
+    </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     </body>
     </html>
