--- a/CapstoneDesign_23_2/index/index.html
+++ b/CapstoneDesign_23_2/index/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Bootstrdemoap </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link href="index.css" rel="stylesheet">
     <style>
@@ -52,44 +52,98 @@
         <table>
             <tr>
               <th>time</th>
-              <th>
-                <div>classroom&</div>
-                <div>subject</div>
-              </th>
+              <th>subject</th>
+              <th>classroom</th>
               <th>memo</th>
             </tr>
             <tr>
               <td>1</td>
-              <td>4-3,science</td>
+              <td>
+                <select>
+                  <option value="1">국어</option>
+                  <option value="1">수학</option>
+                  <option value="1">사회</option>
+                  <option value="1">과학</option>
+                </select>
+              </td>
+              <td>1-1</td>
               <td></td>
              </tr>
             <tr>
               <td>2</td>
-              <td>4-2,science</td>
+              <td>
+                <select>
+                  <option value="1">국어</option>
+                  <option value="1">수학</option>
+                  <option value="1">사회</option>
+                  <option value="1">과학</option>
+                </select>
+              </td>
+              <td>4-2</td>
               <td></td>
             </tr>
             <tr>
               <td>3</td>
-              <td>3-2,science</td>
+              <td>
+                <select>
+                  <option value="1">국어</option>
+                  <option value="1">수학</option>
+                  <option value="1">사회</option>
+                  <option value="1">과학</option>
+                </select>
+              </td>
+              <td>3-2</td>
               <td></td>
             </tr>
             <tr>
               <td>4</td>
-              <td>4-1,science</td>
+              <td>
+                <select>
+                  <option value="1">국어</option>
+                  <option value="1">수학</option>
+                  <option value="1">사회</option>
+                  <option value="1">과학</option>
+                </select>
+              </td>
+              <td>4-1</td>
               <td></td>
             </tr>
             <tr>
               <td>5</td>
-              <td>3-1, science</td>
+              <td>
+                <select>
+                  <option value="1">국어</option>
+                  <option value="1">수학</option>
+                  <option value="1">사회</option>
+                  <option value="1">과학</option>
+                </select>
+              </td>
+              <td>3-1</td>
               <td></td>
              </tr>
             <tr>
               <td>6</td>
-              <td>3-2, science</td>
+              <td>
+                <select>
+                  <option value="1">국어</option>
+                  <option value="1">수학</option>
+                  <option value="1">사회</option>
+                  <option value="1">과학</option>
+                </select>
+              </td>
+              <td>3-2</td>
               <td></td>
             </tr>
             <tr>
               <td>7</td>
+              <td>
+                <select>
+                  <option value="1">국어</option>
+                  <option value="1">수학</option>
+                  <option value="1">사회</option>
+                  <option value="1">과학</option>
+                </select>
+              </td>
               <td></td>
               <td></td>
             </tr>
