change title EduLog

--- a/CapstoneDesign_23_2/monthpage/index.html
+++ b/CapstoneDesign_23_2/monthpage/index.html
@@ -24,7 +24,7 @@
     <!-- Style -->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Calendar #9</title>
+    <title>EduLog</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Twelfth navbar example">
