--- a/CapstoneDesign_23_2/index/index.html
+++ b/CapstoneDesign_23_2/index/index.html
@@ -1,171 +1,251 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>EduLog </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link href="index.css" rel="stylesheet">
-    <style>
-      table, th, td{
-        border: 1px solid black;  
-      }
-      th, td {
-        padding: 10px;
-        text-align: center;
-      }
-    </style>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Twelfth navbar example">
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample10" aria-controls="navbarsExample10" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
 
-        <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample10">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index/index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../weekpage/index.html">week</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../monthpage/index.html">Month</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="../settingpage/settingpage.html">Setting</a></li>
-                <li><a class="dropdown-item" href="#">search</a></li>
-                <li><a class="dropdown-item" href="../index/loginpage.html">Log in</a></li>
-              </ul>
-            </li>
-          </ul>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>EduLog </title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <link href="index.css" rel="stylesheet">
+  <style>
+    table,
+    th,
+    td {
+      border: 1px solid black;
+    }
+
+    th,
+    td {
+      padding: 10px;
+      text-align: center;
+    }
+  </style>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Twelfth navbar example">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample10"
+        aria-controls="navbarsExample10" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample10">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../index/index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../weekpage/index.html">week</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../monthpage/index.html">Month</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="../settingpage/settingpage.html">Setting</a></li>
+              <li><a class="dropdown-item" href="#">search</a></li>
+              <li><a class="dropdown-item" href="../index/loginpage.html">Log in</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="container" style="display: inline-flex; flex-direction: row; justify-content: center;">
+    <div class="flex-item" style="background-color: aqua;">
+      daily timetable
+      <table>
+        <tr>
+          <th>time</th>
+          <th>subject</th>
+          <th>classroom</th>
+          <th>memo</th>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>
+            <select>
+              <option value="1">국어</option>
+              <option value="2">수학</option>
+              <option value="3">사회</option>
+              <option value="4">과학</option>
+            </select>
+          </td>
+          <td>
+            <select>
+              <option value="1">1-1</option>
+              <option value="2">1-2</option>
+              <option value="3">1-3</option>
+              <option value="4">1-4</option>
+            </select>
+          </td>
+          <td>
+            <div class="container">
+              <input type="text" name="st_name">
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>
+            <select>
+              <option value="1">국어</option>
+              <option value="2">수학</option>
+              <option value="3">사회</option>
+              <option value="4">과학</option>
+            </select>
+          </td>
+          <td>
+            <select>
+              <option value="1">1-1</option>
+              <option value="2">1-2</option>
+              <option value="3">1-3</option>
+              <option value="4">1-4</option>
+            </select>
+          </td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>
+            <select>
+              <option value="1">국어</option>
+              <option value="2">수학</option>
+              <option value="3">사회</option>
+              <option value="4">과학</option>
+            </select>
+          </td>
+          <td>
+            <select>
+              <option value="1">1-1</option>
+              <option value="2">1-2</option>
+              <option value="3">1-3</option>
+              <option value="4">1-4</option>
+            </select>
+          </td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>
+            <select>
+              <option value="1">국어</option>
+              <option value="2">수학</option>
+              <option value="3">사회</option>
+              <option value="4">과학</option>
+            </select>
+          </td>
+          <td>
+            <select>
+              <option value="1">1-1</option>
+              <option value="2">1-2</option>
+              <option value="3">1-3</option>
+              <option value="4">1-4</option>
+            </select>
+          </td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>
+            <select>
+              <option value="1">국어</option>
+              <option value="2">수학</option>
+              <option value="3">사회</option>
+              <option value="4">과학</option>
+            </select>
+          </td>
+          <td>
+            <select>
+              <option value="1">1-1</option>
+              <option value="2">1-2</option>
+              <option value="3">1-3</option>
+              <option value="4">1-4</option>
+            </select>
+          </td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>6</td>
+          <td>
+            <select>
+              <option value="1">국어</option>
+              <option value="2">수학</option>
+              <option value="3">사회</option>
+              <option value="4">과학</option>
+            </select>
+          </td>
+          <td>
+            <select>
+              <option value="1">1-1</option>
+              <option value="2">1-2</option>
+              <option value="3">1-3</option>
+              <option value="4">1-4</option>
+            </select>
+          </td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>7</td>
+          <td>
+            <select>
+              <option value="1">국어</option>
+              <option value="2">수학</option>
+              <option value="3">사회</option>
+              <option value="4">과학</option>
+            </select>
+          </td>
+          <td>
+            <select>
+              <option value="1">1-1</option>
+              <option value="2">1-2</option>
+              <option value="3">1-3</option>
+              <option value="4">1-4</option>
+            </select>
+          </td>
+          <td></td>
+        </tr>
+      </table>
+    </div>
+  </div>
+  <div class="container" style="display: inline-flex; flex-direction: row; justify-content: center;">
+    <div class="flex-item" style="background-color: greenyellow; text-align: center;">
+      <div class="row" style="text-align: center;">
+        <div class="container">
+          체크리스트
+        </div>
+        <div class="container">
+          <input type="checkbox"> <input type="text" name="st_name">
+        </div>
+        <div class="container">
+          123
+        </div>
+        <div class="container">
+          123
         </div>
       </div>
-    </nav>
-    <div class="container" style="display: inline-flex; flex-direction: row; justify-content: center;">
-      <div class="flex-item" style="background-color: aqua;">
-        daily timetable
-        <table>
-            <tr>
-              <th>time</th>
-              <th>subject</th>
-              <th>classroom</th>
-              <th>memo</th>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>
-                <select>
-                  <option value="1">국어</option>
-                  <option value="1">수학</option>
-                  <option value="1">사회</option>
-                  <option value="1">과학</option>
-                </select>
-              </td>
-              <td>1-1</td>
-              <td></td>
-             </tr>
-            <tr>
-              <td>2</td>
-              <td>
-                <select>
-                  <option value="1">국어</option>
-                  <option value="1">수학</option>
-                  <option value="1">사회</option>
-                  <option value="1">과학</option>
-                </select>
-              </td>
-              <td>4-2</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>3</td>
-              <td>
-                <select>
-                  <option value="1">국어</option>
-                  <option value="1">수학</option>
-                  <option value="1">사회</option>
-                  <option value="1">과학</option>
-                </select>
-              </td>
-              <td>3-2</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>4</td>
-              <td>
-                <select>
-                  <option value="1">국어</option>
-                  <option value="1">수학</option>
-                  <option value="1">사회</option>
-                  <option value="1">과학</option>
-                </select>
-              </td>
-              <td>4-1</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>5</td>
-              <td>
-                <select>
-                  <option value="1">국어</option>
-                  <option value="1">수학</option>
-                  <option value="1">사회</option>
-                  <option value="1">과학</option>
-                </select>
-              </td>
-              <td>3-1</td>
-              <td></td>
-             </tr>
-            <tr>
-              <td>6</td>
-              <td>
-                <select>
-                  <option value="1">국어</option>
-                  <option value="1">수학</option>
-                  <option value="1">사회</option>
-                  <option value="1">과학</option>
-                </select>
-              </td>
-              <td>3-2</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>7</td>
-              <td>
-                <select>
-                  <option value="1">국어</option>
-                  <option value="1">수학</option>
-                  <option value="1">사회</option>
-                  <option value="1">과학</option>
-                </select>
-              </td>
-              <td></td>
-              <td></td>
-            </tr>
-          </table>
+    </div>
+  </div>
+  <div class="container" style="display: inline-flex; flex-direction: row; justify-content: center;">
+    <div class="flex-item" style="background-color: yellow; text-align: center;">
+      <div class="row" style="text-align: center;">
+        <div class="container">
+          메모장
         </div>
-        <div class="flex-item" style="background-color: greenyellow; text-align: center;">
-          <div class="row" style="text-align: center;">
-            <div class="container">
-              체크리스트
-            </div>
-            <div class="container">
-              <input type="checkbox">  <input type="text" name="st_name">
-            </div>
-            <div class="container">
-              123  
-            </div>
-            <div class="container">
-              123  
-            </div>
-          </div>
+        <div class="container">
+          <input type="text" name="st_name">
         </div>
+        
       </div>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-    </body>
-    </html>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
+</body>
+
+</html>
