--- a/CapstoneDesign_23_2/index/test.html
+++ b/CapstoneDesign_23_2/index/test.html
@@ -1,42 +1,79 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Twelfth navbar example">
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample10" aria-controls="navbarsExample10" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-  
-          <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample10">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="loginpage.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Month</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>체크리스트</title>
+  <style>
+    .checklist {
+      width: 30%;
+      height: auto;
+      border: 1px solid black;
+      margin: 0 auto;
+      text-align: center;
+      font-size: 20px;
+      font-weight: bold;
+      color: black;
+      background-color: white;
+      border-radius: 20px;
+      box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+      margin-bottom: 20px;
+      overflow: hidden;
+    }
+
+    .flex-item {
+      background-color: greenyellow;
+      text-align: center;
+    }
+
+    .container {
+      display: flex;
+      align-items: center;
+      margin: 10px;
+    }
+
+    input[type="checkbox"]:checked + input[type="text"] {
+      text-decoration: line-through;
+    }
+
+    .delete-btn {
+      margin-left: 10px;
+      cursor: pointer;
+    }
+  </style>
+</head>
+<body>
+
+<div class="checklist" style="display: inline-flex; flex-direction: row; justify-content: center;">
+  <div class="flex-item">
+    <div class="row" style="text-align: center;" id="checklist-container">
+      <div class="container">
+        체크리스트
+      </div>
+      <div class="container">
+        <input type="checkbox"> <input type="text" name="st_name">
+        <span class="delete-btn" onclick="deleteChecklistItem(this)">삭제하기</span>
+      </div>
+      <button onclick="addChecklistItem()">추가하기</button>
+    </div>
+  </div>
+</div>
+
+<script>
+  function addChecklistItem() {
+    var container = document.getElementById('checklist-container');
+    var newItem = document.createElement('div');
+    newItem.classList.add('container');
+    newItem.innerHTML = '<input type="checkbox"> <input type="text" name="st_name"> <span class="delete-btn" onclick="deleteChecklistItem(this)">삭제하기</span>';
+    container.insertBefore(newItem, container.lastChild);
+  }
+
+  function deleteChecklistItem(element) {
+    var container = document.getElementById('checklist-container');
+    var itemToDelete = element.parentNode;
+    container.removeChild(itemToDelete);
+  }
+</script>
+
+</body>
 </html>
