--- a/CapstoneDesign_23_2/index/index.html
+++ b/CapstoneDesign_23_2/index/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>EduLog </title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -248,52 +248,25 @@
     </div>
   </div>
   <div class="checklist" style="display: inline-flex; flex-direction: row; justify-content: center;">
-    <div class="flex-item" style="background-color: greenyellow; text-align: center;">
-      <div class="row" style="text-align: center;">
-        <div class="checklistinner">
+    <div class="flex-item">
+      <div class="row" style="text-align: center;" id="checklist-container">
+        <div class="cklist">
           체크리스트
         </div>
         <div class="cklist">
           <input type="checkbox"> <input type="text" name="st_name">
+          <span class="delete-btn" onclick="deleteChecklistItem(this)">삭제하기</span>
         </div>
-        <div class="cklist">
-          <input type="checkbox"> <input type="text" name="st_name">
-        </div>
-        <div class="cklist">
-          <input type="checkbox"> <input type="text" name="st_name">
-        </div>
-        <div class="cklist">
-          <input type="checkbox"> <input type="text" name="st_name">
-        </div>
-        <div class="cklist">
-          <input type="checkbox"> <input type="text" name="st_name">
-        </div>
-        <div class="cklist">
-          <input type="checkbox"> <input type="text" name="st_name">
-        </div>
-        <div class="cklist">
-          <input type="checkbox"> <input type="text" name="st_name">
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="container" style="display: inline-flex; flex-direction: row; justify-content: center;">
-    <div class="flex-item" style="background-color: yellow; text-align: center;">
-      <div class="row" style="text-align: center;">
-        <div class="container">
-          메모장
-        </div>
-        <div class="container">
-          <input type="text" name="st_name">
-        </div>
-        
+        <button onclick="addChecklistItem()">추가하기</button>
       </div>
     </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous">
+  </script>
+  <script src="index.js"></script>
 </body>
 
 </html>
