--- a/CapstoneDesign_23_2/index/index.html
+++ b/CapstoneDesign_23_2/index/index.html
@@ -250,15 +250,14 @@
   <div class="checklist" style="display: inline-flex; flex-direction: row; justify-content: center;">
     <div class="flex-item">
       <div class="row" style="text-align: center;" id="checklist-container">
-        <div class="cklist">
+        <div class="container">
           체크리스트
         </div>
-        <div class="cklist">
-          <input type="checkbox"> <input type="text" name="st_name">
-          <span class="delete-btn" onclick="deleteChecklistItem(this)">삭제하기</span>
+        <div class="container">
+          <input type="checkbox"> <input type="text" name="st_name"> <span class="delete-btn" onclick="deleteChecklistItem(this)">삭제하기</span>
         </div>
-        <button onclick="addChecklistItem()">추가하기</button>
       </div>
+      <button onclick="addChecklistItem()">추가하기</button>
     </div>
   </div>
 
@@ -266,7 +265,23 @@
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous">
   </script>
-  <script src="index.js"></script>
+  <script>
+    var itemCount = 1;
+  
+    function addChecklistItem() {
+      var container = document.getElementById('checklist-container');
+      var newItem = document.createElement('div');
+      newItem.classList.add('container');
+      newItem.innerHTML = '<input type="checkbox"> <input type="text" name="st_name"> <span class="delete-btn" onclick="deleteChecklistItem(this)">삭제하기</span>';
+      container.insertBefore(newItem, container.lastElementChild);
+    }
+  
+    function deleteChecklistItem(element) {
+      var container = document.getElementById('checklist-container');
+      var itemToDelete = element.parentNode;
+      container.removeChild(itemToDelete);
+    }
+  </script>
 </body>
 
 </html>
