--- a/CapstoneDesign_23_2/index/index.html
+++ b/CapstoneDesign_23_2/index/index.html
@@ -41,7 +41,7 @@
             <a class="nav-link active" aria-current="page" href="../index/index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../weekpage/myweekly.html">week</a>
+            <a class="nav-link" href="../weekpage/weekpage.html">week</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../monthpage/index.html">Month</a>
