--- a/CapstoneDesign_23_2/settingpage/settingpage.html
+++ b/CapstoneDesign_23_2/settingpage/settingpage.html
@@ -55,7 +55,7 @@
               <a class="nav-link active" aria-current="page" href="../index/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../weekpage/index.html">week</a>
+              <a class="nav-link" href="../weekpage/weekpage.html">week</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../monthpage/index.html">Month</a>
