--- a/CapstoneDesign_23_2/index/test.html
+++ b/CapstoneDesign_23_2/index/test.html
@@ -57,7 +57,9 @@
     <button onclick="addChecklistItem()">추가하기</button>
   </div>
 </div>
-
+<div>
+  <textarea rows="4" cols="50"></textarea>
+</div>
 <script>
   var itemCount = 1;
 
