--- a/CapstoneDesign_23_2/index/index.html
+++ b/CapstoneDesign_23_2/index/index.html
@@ -9,15 +9,12 @@
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link href="index.css" rel="stylesheet">
   <style>
-    table,
-    th,
-    td {
+    table,th,td {
       border: 1px solid black;
     }
 
-    th,
-    td {
-      padding: 10px;
+    th,td {
+      padding: 2px;
       text-align: center;
     }
 
@@ -47,7 +44,7 @@
             <a class="nav-link" href="../monthpage/index.html">Month</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
+            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Menu</a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="../settingpage/settingpage.html">Setting</a></li>
               <li><a class="dropdown-item" href="#">search</a></li>
@@ -58,8 +55,9 @@
       </div>
     </div>
   </nav>
-  <div class="dailytimetable" style="display: inline-flex; flex-direction: row; justify-content: center;">
-    <div class="flex-item" style="background-color: aqua;">
+  <div class="container">
+    <div class="dailytimetable" style="display: inline-flex; flex-direction: row; justify-content: center;">
+    <div class="flex-item"">
       daily timetable
       <table>
         <tr>
@@ -89,7 +87,7 @@
           </td>
           <td>
             <div class="container">
-              <input type="checkbox" name="xxx" value="yyy"><input type="text" name="st_name">
+              <input type="text" name="st_name">
             </div>
           </td>
         </tr>
@@ -115,7 +113,7 @@
           </td>
           <td>
             <div class="container">
-              <input type="checkbox" name="xxx" value="yyy"><input type="text" name="st_name">
+              <input type="text" name="st_name">
             </div>
           </td>
         </tr>
@@ -140,7 +138,7 @@
           </td>
           <td>
             <div class="container">
-              <input type="checkbox" name="xxx" value="yyy"><input type="text" name="st_name">
+              <input type="text" name="st_name" >
             </div>
           </td>
         </tr>
@@ -165,7 +163,7 @@
           </td>
           <td>
             <div class="container">
-              <input type="checkbox" name="xxx" value="yyy"><input type="text" name="st_name">
+              <input type="text" name="st_name">
             </div>
           </td>
         </tr>
@@ -190,7 +188,7 @@
           </td>
           <td>
             <div class="container">
-              <input type="checkbox" name="xxx" value="yyy"><input type="text" name="st_name">
+              <input type="text" name="st_name">
             </div>
           </td>
         </tr>
@@ -215,7 +213,7 @@
           </td>
           <td>
             <div class="container">
-              <input type="checkbox" name="xxx" value="yyy"><input type="text" name="st_name">
+              <input type="text" name="st_name">
             </div>
           </td>
         </tr>
@@ -240,27 +238,31 @@
           </td>
           <td>
             <div class="container">
-              <input type="checkbox" name="xxx" value="yyy"><input type="text" name="st_name">
+              <input type="text" name="st_name">
             </div>
           </td>
         </tr>
       </table>
     </div>
-  </div>
   <div class="checklist" style="display: inline-flex; flex-direction: row; justify-content: center;">
-    <div class="flex-item">
       <div class="row" style="text-align: center;" id="checklist-container">
-        <div class="container">
+        <p style="text-align: center;">
           체크리스트
-        </div>
+        </p>
         <div class="container">
-          <input type="checkbox"> <input type="text" name="st_name"> <span class="delete-btn" onclick="deleteChecklistItem(this)">삭제하기</span>
+          <input type="checkbox"> <input type="text" name="st_name">
+          <span class="delete-btn" onclick="deleteChecklistItem(this)">삭제</span>
         </div>
+        <button onclick="addChecklistItem()">추가하기</button>
       </div>
-      <button onclick="addChecklistItem()">추가하기</button>
+      
     </div>
   </div>
-
+  <div class="memo">
+    <textarea rows="4" cols="50"></textarea>
+  </div>
+ </div>
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous">
