change dropdonw to menu

--- a/CapstoneDesign_23_2/settingpage/settingpage.html
+++ b/CapstoneDesign_23_2/settingpage/settingpage.html
@@ -61,7 +61,7 @@
               <a class="nav-link" href="../monthpage/index.html">Month</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
+              <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Menu</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="../settingpage/settingpage.html">Setting</a></li>
                 <li><a class="dropdown-item" href="#">search</a></li>
